# hcs-lib

./: .env  Cargo.toml  README.md
program_data/changes/: 1.tmp  2.tmp
sql/: create_tables.sql
src/: client_database.rs  client_detect_live.rs  client_detect_offline.rs  config.rs  data.rs  lib.rs  logger.rs  protocol.rs  server_database.rs  testing_utils.rs
src/client_database/: blank_file.rs  change_counter.rs  custom_metadata.rs  file_types.rs  local_changes.rs  optimize_changes.rs  server_version.rs
src/client_database/change_events/: create_dir.rs  create_file.rs  delete_dir.rs  delete_file.rs  mod.rs  modify_dir.rs  modify_file.rs  move_dir.rs  move_file.rs
src/client_detect_live/: events.rs  run.rs  watcher.rs
src/client_detect_offline/: storage_cases.rs  symlink_cases.rs  walk_storage_dir.rs  walk_symlink_dir.rs
src/data/: error.rs  greeting.rs  optimize_changes.rs  server_version.rs  sync_client_to_server.rs  sync_server_to_client.rs
src/data/directory/: create.rs  delete.rs  mod.rs  move.rs  undo_delete.rs
src/data/file/: create.rs  delete.rs  mod.rs  modify.rs  move.rs  undo_delete.rs
src/data/symlink_data/: create.rs  delete.rs  mod.rs
src/server_database/: change_types.rs  get_changes.rs  initialize.rs  insert_change.rs  server_version.rs  table_details.rs
