[package]
name = "hcs_lib"
version = "0.1.0"
edition = "2021"
authors = ["Sean McConnachie <seanjulian.mcc@gmail.com>"]

[features]
default = ["full"]

full = [
    "client",
    "server",
    "protocol",
    "data",
    "logger",
    "config",
    "errors",
    "server_database",
    "client_database",
    "client_detect_offline",
    "client_detect_live",
]

server_suite = [
    "server",
    "protocol",
    "data",
    "logger",
    "config",
    "errors",
    "server_database",
]

client_suite = [
    "client",
    "protocol",
    "data",
    "logger",
    "config",
    "errors",
    "client_database",
    "client_detect_offline",
    "client_detect_live",
]

# Shared library features
protocol = ["data"]
data = []
logger = []
config = []
errors = []

# Server-side features
server = []
server_database = ["data"]

# Client-side features
client = ["data", "config"]
client_database = []
client_detect_offline = []
client_detect_live = []

[dependencies]
tokio = { version = "1.26.0", features = ["full"] }
async-trait = "0.1.68"

# Deriving
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.95"
bincode = "1.3.3"

# Logging
chrono = "0.4.24"
colored = "2.0.0"
fern = "0.6.1"
log = "0.4"
toml = "0.7.3"

# Database
sqlx = { version = "0.6.3", features = [
    "postgres",
    "runtime-tokio-native-tls",
] }
symlink = "0.1.0"
